safe_hack_demo_esp32c5/build/log/idf_py_stdout_output_9244
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] C:\Windows\system32\cmd.exe /C "cd /D C:\Users\user\Desktop\esp32\safe_hack_demo_esp32c5\build\bootloader\esp-idf\esptool_py && C:\Users\user\.espressif\python_env\idf6.0_py3.13_env\Scripts\python.exe C:/Users/user/Desktop/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x2000 C:/Users/user/Desktop/esp32/safe_hack_demo_esp32c5/build/bootloader/bootloader.bin"
Bootloader binary size 0x55b0 bytes. 0xa50 bytes (11%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
ccache C:\Users\user\.espressif\tools\riscv32-esp-elf\esp-14.2.0_20241119\riscv32-esp-elf\bin\riscv32-esp-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.5-dev-3951-ga74725a31b-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/user/Desktop/esp32/safe_hack_demo_esp32c5/build/config -IC:/Users/user/Desktop/esp32/safe_hack_demo_esp32c5/main -IC:/Users/user/Desktop/esp-idf/components/newlib/platform_include -IC:/Users/user/Desktop/esp-idf/components/freertos/config/include -IC:/Users/user/Desktop/esp-idf/components/freertos/config/include/freertos -IC:/Users/user/Desktop/esp-idf/components/freertos/config/riscv/include -IC:/Users/user/Desktop/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/Users/user/Desktop/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -IC:/Users/user/Desktop/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -IC:/Users/user/Desktop/esp-idf/components/freertos/esp_additions/include -IC:/Users/user/Desktop/esp-idf/components/esp_hw_support/include -IC:/Users/user/Desktop/esp-idf/components/esp_hw_support/include/soc -IC:/Users/user/Desktop/esp-idf/components/esp_hw_support/include/soc/esp32c5 -IC:/Users/user/Desktop/esp-idf/components/esp_hw_support/dma/include -IC:/Users/user/Desktop/esp-idf/components/esp_hw_support/ldo/include -IC:/Users/user/Desktop/esp-idf/components/esp_hw_support/debug_probe/include -IC:/Users/user/Desktop/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -IC:/Users/user/Desktop/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/Users/user/Desktop/esp-idf/components/esp_hw_support/power_supply/include -IC:/Users/user/Desktop/esp-idf/components/esp_hw_support/port/esp32c5/. -IC:/Users/user/Desktop/esp-idf/components/esp_hw_support/port/esp32c5/include -IC:/Users/user/Desktop/esp-idf/components/esp_hw_support/port/esp32c5/private_include -IC:/Users/user/Desktop/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32c5/. -IC:/Users/user/Desktop/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32c5/include -IC:/Users/user/Desktop/esp-idf/components/heap/include -IC:/Users/user/Desktop/esp-idf/components/heap/tlsf -IC:/Users/user/Desktop/esp-idf/components/log/include -IC:/Users/user/Desktop/esp-idf/components/soc/include -IC:/Users/user/Desktop/esp-idf/components/soc/esp32c5 -IC:/Users/user/Desktop/esp-idf/components/soc/esp32c5/include -IC:/Users/user/Desktop/esp-idf/components/soc/esp32c5/register -IC:/Users/user/Desktop/esp-idf/components/hal/platform_port/include -IC:/Users/user/Desktop/esp-idf/components/hal/esp32c5/include -IC:/Users/user/Desktop/esp-idf/components/hal/include -IC:/Users/user/Desktop/esp-idf/components/esp_rom/include -IC:/Users/user/Desktop/esp-idf/components/esp_rom/esp32c5/include -IC:/Users/user/Desktop/esp-idf/components/esp_rom/esp32c5/include/esp32c5 -IC:/Users/user/Desktop/esp-idf/components/esp_rom/esp32c5 -IC:/Users/user/Desktop/esp-idf/components/esp_common/include -IC:/Users/user/Desktop/esp-idf/components/esp_system/include -IC:/Users/user/Desktop/esp-idf/components/esp_system/port/soc -IC:/Users/user/Desktop/esp-idf/components/esp_system/port/include/riscv -IC:/Users/user/Desktop/esp-idf/components/esp_system/port/include/private -IC:/Users/user/Desktop/esp-idf/components/riscv/include -IC:/Users/user/Desktop/esp-idf/components/lwip/include -IC:/Users/user/Desktop/esp-idf/components/lwip/include/apps -IC:/Users/user/Desktop/esp-idf/components/lwip/include/apps/sntp -IC:/Users/user/Desktop/esp-idf/components/lwip/lwip/src/include -IC:/Users/user/Desktop/esp-idf/components/lwip/port/include -IC:/Users/user/Desktop/esp-idf/components/lwip/port/freertos/include -IC:/Users/user/Desktop/esp-idf/components/lwip/port/esp32xx/include -IC:/Users/user/Desktop/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/Users/user/Desktop/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/Users/user/Desktop/esp-idf/components/nvs_flash/include -IC:/Users/user/Desktop/esp-idf/components/esp_partition/include -IC:/Users/user/Desktop/esp-idf/components/esp_wifi/include -IC:/Users/user/Desktop/esp-idf/components/esp_wifi/include/local -IC:/Users/user/Desktop/esp-idf/components/esp_wifi/wifi_apps/include -IC:/Users/user/Desktop/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -IC:/Users/user/Desktop/esp-idf/components/esp_event/include -IC:/Users/user/Desktop/esp-idf/components/esp_phy/include -IC:/Users/user/Desktop/esp-idf/components/esp_phy/esp32c5/include -IC:/Users/user/Desktop/esp-idf/components/esp_netif/include -IC:/Users/user/Desktop/esp-idf/components/esp_http_server/include -IC:/Users/user/Desktop/esp-idf/components/http_parser -IC:/Users/user/Desktop/esp-idf/components/json/cJSON -IC:/Users/user/Desktop/esp-idf/components/esp_timer/include -IC:/Users/user/Desktop/esp32/safe_hack_demo_esp32c5/managed_components/espressif__cjson/cJSON -march=rv32imac_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/user/Desktop/esp32/safe_hack_demo_esp32c5=. -fmacro-prefix-map=C:/Users/user/Desktop/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c C:/Users/user/Desktop/esp32/safe_hack_demo_esp32c5/main/main.c
C:/Users/user/Desktop/esp32/safe_hack_demo_esp32c5/main/main.c: In function 'get_time_sec':
C:/Users/user/Desktop/esp32/safe_hack_demo_esp32c5/main/main.c:71:23: error: implicit declaration of function 'esp_timer_get_time'; did you mean 'timer_gettime'? [-Wimplicit-function-declaration]
   71 |     return (uint32_t)(esp_timer_get_time() / 1000000ULL);
      |                       ^~~~~~~~~~~~~~~~~~
      |                       timer_gettime
C:/Users/user/Desktop/esp32/safe_hack_demo_esp32c5/main/main.c: At top level:
C:/Users/user/Desktop/esp32/safe_hack_demo_esp32c5/main/main.c:75:13: warning: 'scan_and_deauth_clients' defined but not used [-Wunused-function]
   75 | static void scan_and_deauth_clients(uint8_t *ap_mac, uint8_t channel)
      |             ^~~~~~~~~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
